# dnd-list-sorting

./: Cargo.toml  Dioxus.toml  README.md
assets/: tailwind.css
public/: tailwind.css
src/: app.rs  main.rs  route.rs
src/models/: app_state.rs  item.rs  mod.rs  svg.rs
src/ui/components/: icons.rs  item_card.rs  list.rs  mod.rs  nav_bar.rs  side_bar.rs
src/ui/pages/: dnd_lists.rs  error_page.rs  home.rs  mod.rs
