[package]
name = "Drag_end_drop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus" }
dioxus-rsx = { git = "https://github.com/DioxusLabs/dioxus" }
dioxus-core = { git = "https://github.com/DioxusLabs/dioxus" }
dioxus-router = { git = "https://github.com/DioxusLabs/dioxus" }
dioxus-signals = { git = "https://github.com/DioxusLabs/dioxus" }
dioxus-web = { git = "https://github.com/DioxusLabs/dioxus" }
dioxus-logger = "0.4.1"
log = "0.4.20"
tracing = "0.1.40"
tracing-wasm = "0.2.1"